--- a/.github/workflows/integration-test-pkg.yml
+++ b/.github/workflows/integration-test-pkg.yml
@@ -48,7 +48,13 @@ jobs:
           name: integration-test-sdk-java-standalone-0-${{ github.sha }}
           path: |
             test/integration-test/openmldb-test-java/openmldb-sdk-test/target/surefire-reports/TEST-*.xml
-            test/integration-test/openmldb-test-java/openmldb-sdk-test/target/failsafe-reports/TEST-*.xml
+      - name: JAVA SDK TEST PKG Results
+        if: always()
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        with:
+          files: test/integration-test/openmldb-test-java/openmldb-sdk-test/target/surefire-reports/TEST-*.xml
+          check_name: Java222 SDK Test Report
+          comment_title: Java222 SDK Test Report
 #      - name: allure-report
 #        uses: simple-elf/allure-report-action@master
 #        if: always()
@@ -197,19 +203,26 @@ jobs:
 #            test/integration-test/openmldb-test-java/openmldb-http-test/target/surefire-reports/TEST-*.xml
 #            test/integration-test/openmldb-test-java/openmldb-http-test/target/failsafe-reports/junitreports/TEST-*.xml
 #            test/integration-test/openmldb-test-java/openmldb-http-test/target/failsafe-reports/TEST-*.xml
-#
-#  batch-test:
-#    runs-on: ubuntu-latest
-#    container:
-#      image: ghcr.io/4paradigm/hybridsql:0.4.0
-#    env:
-#      OS: linux
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: modify-properties
-#        run: sh test/steps/modify-properties.sh ${{ github.event.inputs.JAVA_SDK_VERSION }} ${{ github.event.inputs.OPENMLDB_SERVER_VERSION }} ${{ github.event.inputs.PYTHON_SDK_VERSION }} ${{ github.event.inputs.BATCH_VERSION }} ${{ github.event.inputs.DIFF_VERSIONS }}
-#      - name: test
-#        run: source /root/.bashrc && bash test/steps/openmldb-batch-test.sh -b PKG
+
+  batch-test:
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/hybridsql:0.4.0
+    env:
+      OS: linux
+    steps:
+      - uses: actions/checkout@v2
+      - name: modify-properties
+        run: sh test/steps/modify-properties.sh ${{ github.event.inputs.JAVA_SDK_VERSION }} ${{ github.event.inputs.OPENMLDB_SERVER_VERSION }} ${{ github.event.inputs.PYTHON_SDK_VERSION }} ${{ github.event.inputs.BATCH_VERSION }} ${{ github.event.inputs.DIFF_VERSIONS }}
+      - name: test
+        run: source /root/.bashrc && bash test/steps/openmldb-batch-test.sh -b PKG
+      - name: upload unit test results
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: integration-test-batch-${{ github.sha }}
+          path: |
+            test/batch-test/openmldb-batch-test/target/surefire-reports/TEST-*.xml
 
   publish-test-results:
     runs-on: ubuntu-latest
@@ -217,10 +230,27 @@ jobs:
     needs: [ "java-sdk-test-standalone-0" ]
     steps:
       - name: Download Artifacts
+        if: always()
         uses: actions/download-artifact@v2
-      - name: INTEGRATION TEST PKG Results
+      - name: JAVA SDK TEST PKG Results
+        if: always()
         uses: EnricoMi/publish-unit-test-result-action@v1
         with:
           files: integration-test-*/**/*.xml
-          check_name: INTEGRATION Test Report
-          comment_title: INTEGRATION Test Report
+          check_name: Java SDK Test Report
+          comment_title: Java SDK Test Report
+
+  batch-test-results:
+    runs-on: ubuntu-latest
+    needs: [ "batch-test" ]
+    steps:
+      - name: Download Artifacts
+        if: always()
+        uses: actions/download-artifact@v2
+      - name: BATCH TEST PKG Results
+        if: always()
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        with:
+          files: integration-test-*/**/*.xml
+          check_name: Batch Test PKG Report
+          comment_title: Batch Test PKG Report
