Support spark.master config to run job in yarn or local

--- a/java/openmldb-taskmanager/src/main/resources/openmldb-taskmanager.properties
+++ b/java/openmldb-taskmanager/src/main/resources/openmldb-taskmanager.properties
@@ -11,4 +11,7 @@ hive.metastore.endpoint=thrift://m7-pce-dev01.4pd.io:9083
 
 batchjob.jar.path=hdfs:///Users/tobe/openmldb_batch_files/openmldb-batchjob-1.0-SNAPSHOT.jar
 
-spark.yarn.jars=hdfs:///Users/tobe/spark_300_jars/*
+# Spark Config
+spark.master=yarn
+# spark.yarn.jars=hdfs:///Users/tobe/spark_300_jars/*
+spark.yarn.jars=hdfs:///Users/tobe/openmldb_300_jars/*
